--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,3 +1,38 @@
 * {
   box-sizing: border-box;
 }
+
+.wrapper {
+  display: flex;
+}
+
+.Side-bar {
+  width: 300px;
+
+  &__user-name {
+    height: 100px;
+    background-color: #253141;
+  }
+
+  &__group-list {
+    height: calc(100vh - 100px);
+    background-color: #2f3e51;
+  }
+}
+
+.Chat-main {
+  width: calc(100vw - 300px);
+  &__group-info {
+    height: 100px;
+    background-color: #fff;
+    margin-bottom: 1px #eeeeee;
+  }
+  &__message-list {
+    height: calc(100vh - 100px - 90px);
+    background-color: #fafafa;
+  }
+  &__message-form {
+    height: 90px;
+    background-color: #d2d2d2;
+  }
+}
