--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,3 +1,11 @@
 .Side-bar
   .Side-bar__user-name
+    .top-items
+      .top-items__name
+        masa
+      .top-items__icons
+        = link_to "#", class: "icons-btn" do
+          = icon('far', 'edit')
+        = link_to "#", class: "icons-btn" do
+          = icon('fas', 'cog')
   .Side-bar__group-list
