--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -8,4 +8,15 @@
           = icon('far', 'edit')
         = link_to "#", class: "icons-btn" do
           = icon('fas', 'cog')
+
   .Side-bar__group-list
+    .groups-items
+      .groups-items__name
+        techcamp
+      .groups-items__message
+        まだメッセージがありません
+    .groups-items
+      .groups-items__name
+        techmaster
+      .groups-items__message
+        こんにちは
