--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,13 @@
 .Chat-main
   .Chat-main__group-info
+    .group-info
+      .group-info__left
+        .group-info__left--name
+          techcamp
+        .group-info__left--member
+          Member : masa
+      .group-info__right
+        =link_to "#", class: "edit-btn" do
+          Edit
   .Chat-main__message-list
   .Chat-main__message-form
