--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -49,7 +49,6 @@
       margin: 0 20px 40px;
       padding-top: 20px;
       color: #ffffff;
-      font-weight: bold;
 
       &__name {
         font-size: 15px;
@@ -65,14 +64,51 @@
 .Chat-main {
   width: calc(100vw - 300px);
   &__group-info {
-    height: 100px;
     background-color: #fff;
-    margin-bottom: 1px #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+
+    .group-info {
+      height: 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      &__left {
+        margin-left: 40px;
+
+        &--name {
+          font-size: 20px;
+          color: #333333;
+          margin: 35px 0 15px;
+        }
+        &--member {
+          font-size: 12px;
+          color: #999999;
+        }
+      }
+
+      &__right {
+        margin-right: 40px;
+        .edit-btn {
+          display: block;
+          height: 40px;
+          line-height: 40px;
+          width: 72px;
+          padding: 0 20px;
+          color: #38aef0;
+          text-decoration: none;
+          border: 1px solid #38aef0;
+        }
+      }
+    }
   }
+
   &__message-list {
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
+    padding-top: 35px;
   }
+
   &__message-form {
     height: 90px;
     background-color: #d2d2d2;
