--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,4 +10,20 @@
         =link_to "#", class: "edit-btn" do
           Edit
   .Chat-main__message-list
+    .tweet-block
+      .tweet-block__content
+        .tweet-block__content--name
+          masa
+        .tweet-block__content--date
+          0000/00/00/(Wed) 00:00:00
+      .tweet-block__message
+        おはよう！
+    .tweet-block
+      .tweet-block__content
+        .tweet-block__content--name
+          masa
+        .tweet-block__content--date
+          0000/00/00/(Wed) 00:00:00
+      .tweet-block__message
+        こんにちは！
   .Chat-main__message-form
