--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -107,6 +107,30 @@
     height: calc(100vh - 100px - 90px);
     background-color: #fafafa;
     padding-top: 35px;
+
+    .tweet-block {
+      margin: 0 0 46px 40px;
+
+      &__content {
+        display: flex;
+
+        margin-bottom: 12px;
+        &--name {
+          font-weight: bold;
+          color: #333333;
+        }
+        &--date {
+          font-size: 12px;
+          color: #999999;
+          margin-left: 10px;
+        }
+      }
+
+      &__message {
+        font-size: 14px;
+        color: #434a54;
+      }
+    }
   }
 
   &__message-form {
