--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -113,7 +113,6 @@
 
       &__content {
         display: flex;
-
         margin-bottom: 12px;
         &--name {
           font-weight: bold;
@@ -136,5 +135,46 @@
   &__message-form {
     height: 90px;
     background-color: #d2d2d2;
+    display: flex;
+    align-items: center;
+
+    .form__contents {
+      width: 100%;
+      display: flex;
+      align-items: center;
+
+      .form__input {
+        width: 100%;
+        display: flex;
+        margin-left: 40px;
+        align-items: center;
+        position: relative;
+        &--text {
+          width: 100%;
+          height: 50px;
+          padding-left: 10px;
+          display: block;
+          border: none;
+        }
+        &--img {
+          font-size: 25px;
+          position: absolute;
+          right: 10px;
+          .file-text {
+            display: none;
+          }
+        }
+      }
+
+      .form__submit--btn {
+        display: block;
+        height: 50px;
+        padding: 0 30px;
+        margin: 0 40px 0 15px;
+        border: none;
+        color: #ffffff;
+        background-color: #38aef0;
+      }
+    }
   }
 }
