--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .Side-bar__user-name
     .top-items
       .top-items__name
-        masa
+        = current_user.name
       .top-items__icons
         = link_to "#", class: "icons-btn" do
           = icon('far', 'edit')
-        = link_to "#", class: "icons-btn" do
+        = link_to edit_user_path(current_user), class: "icons-btn" do
           = icon('fas', 'cog')
 
   .Side-bar__group-list
