--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       .top-items__name
         = current_user.name
       .top-items__icons
-        = link_to "#", class: "icons-btn" do
+        = link_to new_group_path(current_user), class: "icons-btn" do
           = icon('far', 'edit')
         = link_to edit_user_path(current_user), class: "icons-btn" do
           = icon('fas', 'cog')
