--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,9 +12,9 @@
   .Side-bar__group-list
     - current_user.groups.each do |group|
       .groups-items
-        = link_to "#" do
+        = link_to group_messages_path(group) do
           .groups-items__name
             = group.name
           .groups-items__message
-            まだメッセージがありません
+            = group.show_last_message
 
