--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.tweet-block
+.tweet-block{data: {message: {id: message.id}}}
   .tweet-block__content
     .tweet-block__content--name
       = message.user.name
